# RayTracer

./: .gitignore  CMakeLists.txt  Object.h  RT2.sln  RT2.vcxproj  RT2.vcxproj.filters
.claude/: settings.local.json
Tests/: Tests.cpp  Tests.vcxproj
shaders/: FullscreenQuadPS.hlsl  FullscreenQuadVS.hlsl  GradientPS.hlsl  OverviewPS.hlsl  OverviewVS.hlsl  PhongPS.hlsl  PhongVS.hlsl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  DXDevice.cpp  DXDevice.h  InputManager.h  Lights.h  Material.cpp  Material.h  Object.h  PBRSoftwareRenderer.cpp  Scene.h  SwapChainTarget.cpp  SwapChainTarget.h  Window.cpp  Window.h  main.cpp
src/math/: MathTypes.cpp  MathTypes.h
src/renderer/: FullscreenQuad.cpp  FullscreenQuad.h  GPURenderer.cpp  GPURenderer.h  IRenderer.h  PBRSoftwareRenderer.cpp  PBRSoftwareRenderer.h  RenderFactory.cpp  RenderFactory.h  SceneOverviewRenderer.cpp  SceneOverviewRenderer.h  SoftwareOverviewRenderer.cpp  SoftwareOverviewRenderer.h  SoftwareRenderer.cpp  SoftwareRenderer.h  SoftwareRendererBase.cpp  SoftwareRendererBase.h  utils.cpp  utils.h
